Eingabe löschen Button hinzugefügt

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Landinformationen nach Sprache, Währung und Region HELLO</title>
+    <title>Landinformationen nach Sprache, Währung und Region</title>
     <!-- Bootstrap Stylesheet -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <!-- Eigene Styles -->
@@ -39,9 +39,12 @@
                 </div>
 
                 <!-- Such-Button -->
-                <div class="text-center">
-                    <button id="searchButton" class="btn btn-primary">Suchen</button>
-                </div>
+            <div class="text-center">
+                <button id="searchButton" class="btn btn-primary">Suchen</button>
+                 <!-- Eingabe löschen Button -->
+                <button id="clearButton" class="btn btn-danger ml-3">Eingabe löschen</button>
+            </div>
+
 
                 <!-- Ergebnisse -->
                 <div id="countryInfo" class="mt-4"></div>
