aussehen und buttons

--- a/index.html
+++ b/index.html
@@ -51,12 +51,15 @@
                         <button id="clearButton" class="btn btn-danger ml-3">Eingabe löschen</button>
                     </div>
 
+
                     <!-- Ergebnisse -->
                     <div id="countryInfo" class="mt-4"></div>
+                 
+</div>
                 </div>
             </div>
         </div>
-        
+
     </div>
 </main>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
